budgeter-ui/src/pages/home/components/Category/Category.module.css
.categoryTable {
	width: 100%;
	table-layout: fixed;
	border-collapse: collapse;
	font-size: 0.9rem;
	margin-bottom: 32px;
}

.categoryTable td,
.categoryTable th {
	padding: 4px 6px;
}

.categoryHeader {
	background: gray;
	text-align: center;
	font-size: 1.1rem;
	font-weight: bold;
	border: 1px solid black;
}

.headerRow {
	text-align: center;
	font-weight: bold;
	text-decoration: underline;
}

.headerRow td {
	border-bottom: 1px solid black;
}

